Fix crashes chrome://interventions-internals on ECT change.

InterventionsInternalPageHandler remove itself from the ECT observer
list instead of InterventionsIntenralsUI removing the page  handler from
the observer list.

Bug: 787026
Change-Id: I4c0766fa0573e3a28072cf70788160e8310312f2