chrome/browser/ui/webui/interventions_internals/interventions_internals_page_handler.h
@@ -16,6 +16,8 @@
 #include "net/nqe/effective_connection_type.h"
 #include "net/nqe/effective_connection_type_observer.h"
 
+class UINetworkQualityEstimatorService;
+
 class InterventionsInternalsPageHandler
     : public previews::PreviewsLoggerObserver,
       public net::EffectiveConnectionTypeObserver,
@@ -24,7 +26,8 @@ class InterventionsInternalsPageHandler
  public:
   InterventionsInternalsPageHandler(
       mojom::InterventionsInternalsPageHandlerRequest request,
-      previews::PreviewsUIService* previews_ui_service);
+      previews::PreviewsUIService* previews_ui_service,
+      UINetworkQualityEstimatorService* ui_nqe_service);
   ~InterventionsInternalsPageHandler() override;
 
   // mojom::InterventionsInternalsPageHandler:
@@ -55,6 +58,10 @@ class InterventionsInternalsPageHandler
   // A pointer to the PreviewsUIService associated with this handler, and
   // guaranteed to outlive |this|.
   previews::PreviewsUIService* previews_ui_service_;
+
+  // A pointer to the UINetworkQualityEsitmatorService, guaranteed to outlive
+  // |this|.
+  UINetworkQualityEstimatorService* ui_nqe_service_;
 
   // The current estimated effective connection type.
   net::EffectiveConnectionType current_estimated_ect_;
